--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "scrcpy-gui",
   "private": true,
-  "version": "0.2.1",
+  "version": "0.2.2",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "build:nsis": "tauri build",
     "preview": "vite preview",
     "tauri": "tauri"
   },
