--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -24,3 +24,4 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tokio = { version = "1", features = ["process", "full"] }
 rfd = { version = "0.16", features = ["xdg-portal"] }
+lazy_static = "1.4"
